PROJECT(CUDA_tex_test)

IF (PLM_BUILD_CUDA_TEST AND CUDA_FOUND)

  IF (PLM_USE_FINDCUDA)
    CUDA_COMPILE (CUDA_TEX_TEST_WRAPPERS 
      tex_kernels.cu
      tex_stubs.cu)
    SET (CUDA_TEX_TEST_SRC
      ${CUDA_TEX_TEST_WRAPPERS}
      tex_kernels.h
      tex_stubs.h
      textures.c
      )
    PLM_ADD_EXECUTABLE (cuda_tex_test 
      "${CUDA_TEX_TEST_SRC}" 
      "${CUDA_LIBRARIES}" ""
      )

#  ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_SRC})
#  TARGET_LINK_LIBRARIES(${TARGET_NAME} ${TARGET_LIBS})

  ENDIF (PLM_USE_FINDCUDA)
ENDIF (PLM_BUILD_CUDA_TEST AND CUDA_FOUND)
